--- a/impressiveUploader/uploader/templates/upload.html
+++ b/impressiveUploader/uploader/templates/upload.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Impressive Uploader</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="{% static 'js/upload.js' %}"></script>
  
@@ -28,12 +28,13 @@
  
  
     <div>
-        <form action="{% url 'api:upload' %}" method="post" enctype="multipart/form-data">
-            {% csrf_token %}
-            {{form.as_p}}
-            <input type="submit" value="ok">
-        </form>
- 
+        <div>
+            <form action="{% url 'api:upload' %}" method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                {{form.as_p}}
+                <input type="submit" value="ok" class="btn btn-success">
+            </form>
+        </div>
         <div class="progress">
             <div id="progressBar" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0"
                 aria-valuemax="100" style="width: 0%;">
@@ -44,8 +45,8 @@
         <button class="btn btn-info" style="display:none;" id="pausebtn">Stop</button>
 
         <div id="action">
-            <button class="btn btn-block" style="display:none" id="continuebtn">Continue</button>
-            <button class="btn btn-block" style="display:none" id="stopbtn">Abort</button>
+            <button class="btn btn-success" style="display:none" id="continuebtn">Continue</button>
+            <button class="btn btn-danger" style="display:none" id="stopbtn">Abort</button>
         </div>
 
     </div>
